--- a/index.html
+++ b/index.html
@@ -6,16 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Face recognition App</title>
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <header>Face recognition in the browser using Javascript</header>
-    <div class="container">
+    <header
+      class="flex shadow-md py-4 px-4 sm:px-10 bg-white font-[sans-serif] min-h-[70px] tracking-wide relative z-50"
+    >
+      <div
+        class="flex flex-wrap items-center justify-center w-full text-gray-800"
+      >
+        <div class="col">
+          <div class="row">
+            <p class="text-3xl font-bold text-center text-gray-800">
+              Face Recognition
+            </p>
+          </div>
+          <div class="row">
+            <p class="text-center text-gray-800 text-sm">by Yoga Bayu A.P</p>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <div class="canvas mt-2 flex flex-wrap items-center justify-center">
       <video id="video" height="500" width="500" autoplay muted></video>
     </div>
+
     <div class="result-container">
-      <div id="emotion">Emosi: </div>
-      <div id="gender">Jenis Kelamin: </div>
-      <div id="age">Umur: </div>
+      <div class="flex justify-between gap-4">
+        <div id="emotion" class="p-2 border-2 radius-md">Emosi:</div>
+        <div id="gender" class="p-2 border-2 radius-md">Jenis Kelamin:</div>
+        <div id="age" class="p-2 border-2 radius-md">Umur:</div>
+      </div>
     </div>
 
     <script src="./js/face-api.min.js"></script>
